[NUCACCESS-60] Use "XXX.valueOf" in preference of "new XXX"